<package format="2">
  <name>htpm_parameter_service</name>
  <version>1.1.0</version>
  <description>
  This package provides visualisation of parameters and KITTI data
  </description>
  <license>Apache2.0</license>
  <maintainer email="28733969+jhoogmoed@users.noreply.github.com">jhoogmoed</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roslaunch</build_depend>

  
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

</package>